--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 contourpy==1.2.0
 cycler==0.12.1
 dm-tree==0.1.8
+docutils==0.20.1
 flatbuffers==24.3.7
 fonttools==4.49.0
 gast==0.5.4
@@ -12,7 +13,12 @@ google-pasta==0.2.0
 grpcio==1.62.1
 h5py==3.10.0
 idna==3.6
+importlib_metadata==7.1.0
+jaraco.classes==3.3.1
+jaraco.context==4.3.0
+jaraco.functools==4.0.0
 keras==3.0.5
+keyring==25.0.0
 kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5.2
@@ -21,18 +27,25 @@ MarkupSafe==2.1.5
 matplotlib==3.8.3
 mdurl==0.1.2
 ml-dtypes==0.3.2
+more-itertools==10.2.0
 namex==0.0.7
+nh3==0.2.15
 numpy==1.26.4
 opt-einsum==3.3.0
 packaging==24.0
 pandas==2.2.1
 pillow==10.2.0
+pkginfo==1.10.0
 protobuf==4.25.3
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32-ctypes==0.2.2
+readme_renderer==43.0
 requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
 rich==13.7.1
 scipy==1.12.0
 six==1.16.0
@@ -42,8 +55,11 @@ tensorflow==2.16.1
 tensorflow-intel==2.16.1
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
+twine==5.0.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.1
+wheel==0.43.0
 wrapt==1.16.0
+zipp==3.18.1
