--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 absl-py==2.1.0
+aiodns==3.2.0
+aiohttp==3.9.3
+aiosignal==1.3.1
 astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.2.0
+ccxt==4.2.87
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 contourpy==1.2.0
+cryptography==42.0.5
 cycler==0.12.1
 dm-tree==0.1.8
 docutils==0.20.1
 flatbuffers==24.3.7
 fonttools==4.49.0
+frozenlist==1.4.1
 gast==0.5.4
 google-pasta==0.2.0
 grpcio==1.62.1
@@ -28,6 +37,7 @@ matplotlib==3.8.3
 mdurl==0.1.2
 ml-dtypes==0.3.2
 more-itertools==10.2.0
+multidict==6.0.5
 namex==0.0.7
 nh3==0.2.15
 numpy==1.26.4
@@ -37,6 +47,8 @@ pandas==2.2.1
 pillow==10.2.0
 pkginfo==1.10.0
 protobuf==4.25.3
+pycares==4.4.0
+pycparser==2.22
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
@@ -60,6 +72,6 @@ typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.1
-wheel==0.43.0
 wrapt==1.16.0
+yarl==1.9.4
 zipp==3.18.1
